[tool.poetry]
name = "repl_python3_GPT-3-Summarize-Research"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
abstract = "^2020.7.26"
pdfplumber = "^0.5.28"
wget = "^3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
